# einspect

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: codecov.yml
.github/workflows/: build.yml  coverage.yml  docs-check.yml  docs-deploy.yml  docs.yml  publish.yml  tests.yml
_demos/: _main.ipynb  _main.py  _main2.ipynb  _main2.py  _main3.py  _main_alt.py  _md.py  _more_moving.py  _moving.py  _tup_test1.py  _tup_test2.py  _unsafe_tups.py  iterative_tuple_change_demo.py  main0.py  new_demo.py  pyobj_reference.py  ref2.py
docs/source/: conf.py  extending_types.md  index.md  intro.md  structs.md  views.md
docs/source/api/: orig.md  types.md
docs/source/api/structs/: index.md  mapping_proxy.rst  py_bool.rst  py_cfunction.rst  py_dict.rst  py_float.rst  py_function.rst  py_gc.rst  py_list.rst  py_long.rst  py_object.rst  py_set.rst  py_tuple.rst  py_type.rst  py_unicode.rst  traits.md
docs/source/api/views/: index.md  view_base.rst  view_bool.rst  view_cfunction.rst  view_dict.rst  view_float.rst  view_function.rst  view_int.rst  view_list.rst  view_mapping_proxy.rst  view_set.rst  view_str.rst  view_tuple.rst  view_type.rst
src/einspect/: __init__.py  _patch.py  _typing.py  api.py  compat.py  errors.py  ext_types.py  protocols.py  structs.py  type_orig.py  types.py  utils.py  views.py
src/einspect/_compat/: py_function_3_10.py  py_function_3_9.py  py_unicode_3_12.py
src/einspect/protocols/: __init__.py  delayed_bind.py  type_parse.py
src/einspect/structs/: __init__.py  deco.py  mapping_proxy.py  py_bool.py  py_cfunction.py  py_dict.py  py_float.py  py_function.py  py_gc.py  py_list.py  py_long.py  py_object.py  py_set.py  py_tuple.py  py_type.py  py_unicode.py  slots_map.py  traits.py
src/einspect/structs/include/: descrobject_h.py  methodobject_h.py  object_h.py  pybuffer_h.py
src/einspect/views/: __init__.py  _display.py  _moves.py  factory.py  moves.py  unsafe.py  view_base.py  view_bool.py  view_cfunction.py  view_dict.py  view_float.py  view_function.py  view_int.py  view_list.py  view_mapping_proxy.py  view_set.py  view_str.py  view_tuple.py  view_type.py
tests/: __init__.py  conftest.py  test_api.py  test_compat.py  test_delayed_bind.py  test_impl.py  test_impl_sp.py  test_meta.py  test_orig.py  test_patch.py  test_slot_map.py  test_structs.py  test_type_parse.py  test_types.py  test_typing.py  test_unsafe.py  test_views.py
tests/structs/: test_deco.py  test_gc.py  test_null.py  test_structs.py
tests/views/: test_display.py  test_move.py  test_view_base.py  test_view_cfunction.py  test_view_dict.py  test_view_function.py  test_view_int.py  test_view_list.py  test_view_mapping_proxy.py  test_view_set.py  test_view_str.py  test_view_tuple.py  test_view_type.py
tools/: README.md  __main__.py  app.py  sources.py  struct_meta.py
